--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "16.0.9",
+    "next-auth": "5.0.0-beta.30",
     "nodemailer": "^7.0.11",
     "react": "19.2.1",
     "react-dom": "19.2.1"
